@@ -1,7 +1,10 @@
 1.3-19
 
+* `smooth.construct' functions for "cc" and "cr" smooths now increase `k'
+  to the minimum possible value (and warn), if it's too low. 
+
 * `gam' modified to allow passing of `mustart' etc to gam.fit and 
-gam.fit2, properly
+  gam.fit2, properly
 
 * `gam' modified to fix a bug whereby fitting in two steps using argument 
   `G' could fail when some sp's are to be estimated and some fixed.
